@@ -1,3 +1,8 @@
+2004-09-15 Scott Dattalo <scott@dattalo.com>
+	* src/processor.cc, src/trace.cc, gui/gui_src_opcode.cc:
+	- 18f processors' addresses were off by a factor of two in
+	disassembly operations.
+	
 2004-09-14 Borut Razem <borut.razem@siol.net>
 	* cli/cli.cvproj, src/src.vcproj, plat/win32/gpsim.def: MSVC sync
 	* cli/makefile.mingw, src/makefile.mingw: MinGW sync
